Updated repo with most recent changes

--- a/dataclean_sql.ipynb
+++ b/dataclean_sql.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 220,
    "id": "51f499fe",
    "metadata": {},
    "outputs": [
@@ -409,72 +409,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SONG: \"Real Love - Anthology 2 Version\"\n",
-      "ALBUM: Anthology 2\n",
-      "LENGTH: 3.54\n",
+      "SONG: \"Changes\"\n",
+      "ALBUM: The Ultimate Collection\n",
+      "LENGTH: 4.42\n",
       "\n",
-      "SONG: \"Come Together - Remastered 2009\"\n",
-      "ALBUM: Abbey Road (Remastered)\n",
-      "LENGTH: 4.2\n",
+      "SONG: \"Paranoid\"\n",
+      "ALBUM: Greatest Hits\n",
+      "LENGTH: 2.48\n",
       "\n",
-      "SONG: \"Revolution - Remastered 2009\"\n",
-      "ALBUM: The Beatles 1967 - 1970 (Remastered)\n",
-      "LENGTH: 3.25\n",
+      "SONG: \"Iron Man - 2014 Remaster\"\n",
+      "ALBUM: Paranoid (2014 Remaster)\n",
+      "LENGTH: 5.55\n",
       "\n",
-      "SONG: \"I Saw Her Standing There - Remastered 2009\"\n",
-      "ALBUM: Please Please Me (Remastered)\n",
-      "LENGTH: 2.54\n",
+      "SONG: \"Paranoid - 2016 Remaster\"\n",
+      "ALBUM: Paranoid (2014 Remaster)\n",
+      "LENGTH: 2.48\n",
       "\n",
-      "SONG: \"I Want To Hold Your Hand - Remastered 2015\"\n",
-      "ALBUM: 1 (Remastered)\n",
-      "LENGTH: 2.26\n",
+      "SONG: \"Iron Man\"\n",
+      "ALBUM: Paranoid\n",
+      "LENGTH: 5.54\n",
       "\n",
-      "SONG: \"Come Together - 2019 Mix\"\n",
-      "ALBUM: Abbey Road (Super Deluxe Edition)\n",
-      "LENGTH: 4.2\n",
+      "SONG: \"Paranoid\"\n",
+      "ALBUM: Paranoid (Remastered)\n",
+      "LENGTH: 2.48\n",
       "\n",
-      "SONG: \"Back In The U.S.S.R. - 2018 Mix\"\n",
-      "ALBUM: The Beatles\n",
-      "LENGTH: 2.43\n",
+      "SONG: \"Paranoid\"\n",
+      "ALBUM: Paranoid (2009 Remastered Version)\n",
+      "LENGTH: 2.48\n",
       "\n",
-      "SONG: \"Hey Jude - Remastered 2009\"\n",
-      "ALBUM: Past Masters (Vols. 1 & 2 / Remastered)\n",
-      "LENGTH: 7.1\n",
+      "SONG: \"Paranoid\"\n",
+      "ALBUM: Absolute Rock Anthems\n",
+      "LENGTH: 2.46\n",
       "\n",
-      "SONG: \"Helter Skelter - Remastered 2009\"\n",
-      "ALBUM: The Beatles (Remastered)\n",
-      "LENGTH: 4.3\n",
+      "SONG: \"Iron Man\"\n",
+      "ALBUM: Lords Of Dogtown\n",
+      "LENGTH: 5.54\n",
       "\n",
-      "SONG: \"A Day In The Life - Remastered 2009\"\n",
-      "ALBUM: Sgt. Pepper's Lonely Hearts Club Band (Remastered)\n",
-      "LENGTH: 5.37\n",
+      "SONG: \"Tomorrow's Dream\"\n",
+      "ALBUM: Black Sabbath Vol. 4 (Remastered)\n",
+      "LENGTH: 3.09\n",
       "\n",
-      "SONG: \"Eight Days A Week - Remastered 2009\"\n",
-      "ALBUM: Beatles For Sale (Remastered)\n",
-      "LENGTH: 2.44\n",
+      "SONG: \"After Forever\"\n",
+      "ALBUM: Master Of Reality (Remastered)\n",
+      "LENGTH: 5.26\n",
       "\n",
-      "SONG: \"In My Life - Remastered 2009\"\n",
-      "ALBUM: Rubber Soul (Remastered)\n",
-      "LENGTH: 2.26\n",
+      "SONG: \"Looking for Today\"\n",
+      "ALBUM: Sabbath Bloody Sabbath (Remastered)\n",
+      "LENGTH: 5.01\n",
       "\n",
-      "SONG: \"Something - Remastered 2009\"\n",
-      "ALBUM: Abbey Road (Remastered)\n",
-      "LENGTH: 3.02\n",
+      "SONG: \"It's Alright\"\n",
+      "ALBUM: Technical Ecstasy (Remastered)\n",
+      "LENGTH: 3.59\n",
       "\n",
-      "SONG: \"Let It Be - Remastered 2009\"\n",
-      "ALBUM: Let It Be (Remastered)\n",
-      "LENGTH: 4.03\n",
+      "SONG: \"Heaven And Hell\"\n",
+      "ALBUM: Heaven & Hell (Deluxe Edition)\n",
+      "LENGTH: 6.58\n",
       "\n",
-      "SONG: \"The Long And Winding Road - Remastered 2009\"\n",
-      "ALBUM: Let It Be (Remastered)\n",
-      "LENGTH: 3.38\n",
+      "SONG: \"Paranoid\"\n",
+      "ALBUM: Paranoid\n",
+      "LENGTH: 2.48\n",
+      "\n",
+      "SONG: \"Iron Man\"\n",
+      "ALBUM: Greatest Hits\n",
+      "LENGTH: 5.54\n",
       "\n"
      ]
     }
    ],
    "source": [
     "for row in results:\n",
-    "    if row.artist == \"The Beatles\" and row.duration_minutes_seconds >= 2.0:\n",
+    "    if row.artist == \"Black Sabbath\":\n",
     "        print(f'SONG: \"{row.track_name}\"\\nALBUM: {row.album_name}\\nLENGTH: {row.duration_minutes_seconds}\\n')"
    ]
   },
