--- a/dataclean_sql.ipynb
+++ b/dataclean_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "0477770d",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "id": "1f2e1e0f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "id": "2b2e3185",
    "metadata": {
     "scrolled": true
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "bfd4b3d7",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "f7261e37",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "id": "89a7616f",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "39d3a2c9",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "c0b31550",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
+   "id": "d1be6632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rename_ss['duration_seconds'] = round(rename_ss['duration_seconds']).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "57b898b5",
    "metadata": {},
    "outputs": [],
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 11,
    "id": "d6cf2b95",
    "metadata": {},
    "outputs": [],
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "id": "a3d3cf2c",
    "metadata": {},
    "outputs": [],
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 13,
    "id": "777c6af1",
    "metadata": {},
    "outputs": [],
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "id": "678f38ac",
    "metadata": {},
    "outputs": [],
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 15,
    "id": "4e559a46",
    "metadata": {
     "scrolled": true
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 16,
    "id": "5ac65299",
    "metadata": {},
    "outputs": [],
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 17,
    "id": "e1938c39",
    "metadata": {},
    "outputs": [
@@ -206,7 +216,7 @@
        "32828"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 18,
    "id": "a66acd97",
    "metadata": {},
    "outputs": [],
@@ -229,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 19,
    "id": "96c2f7a3",
    "metadata": {},
    "outputs": [],
@@ -240,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 20,
    "id": "f50b17d4",
    "metadata": {},
    "outputs": [],
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 21,
    "id": "285a3395",
    "metadata": {},
    "outputs": [
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 22,
    "id": "76661523",
    "metadata": {},
    "outputs": [],
@@ -282,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 23,
    "id": "b79be841",
    "metadata": {},
    "outputs": [],
@@ -293,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 24,
    "id": "b32c7aa2",
    "metadata": {},
    "outputs": [
@@ -311,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 25,
    "id": "ed2151a6",
    "metadata": {},
    "outputs": [],
@@ -323,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 26,
    "id": "6d1d2c58",
    "metadata": {},
    "outputs": [],
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 27,
    "id": "73c0b872",
    "metadata": {},
    "outputs": [],
@@ -344,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 28,
    "id": "c5be9a18",
    "metadata": {
     "scrolled": true
@@ -381,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 29,
    "id": "e7390188",
    "metadata": {},
    "outputs": [],
@@ -391,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 30,
    "id": "3def5e90",
    "metadata": {},
    "outputs": [],
@@ -401,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 31,
    "id": "51f499fe",
    "metadata": {},
    "outputs": [
@@ -486,6 +496,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "abc37533",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b9a5a7e",
    "metadata": {},
    "outputs": [],
    "source": []
